standards-audit/fixtures/conformant-app-k8s-noenv/k8s/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: audit-demo
  namespace: apps-ns
spec:
  type: LoadBalancer
  selector:
    app: audit-demo
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
    name: http
